--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "private": true,
   "dependencies": {
-    "axios": "^0.27.2",
-    "express": "^4.18.1",
-    "tslib": "^2.3.0"
+    "axios": "0.27.2",
+    "express": "4.18.1",
+    "tslib": "2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "14.5.10",
@@ -24,13 +24,13 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.5.1",
     "nx": "14.5.10",
-    "prettier": "^2.6.2",
+    "prettier": "2.6.2",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2"
