--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nrwl/jest": "14.5.10",
     "@nrwl/linter": "14.5.10",
     "@nrwl/node": "14.5.10",
+    "@nrwl/react": "^14.5.10",
     "@nrwl/workspace": "14.5.10",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
