--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "private": true,
   "dependencies": {
+    "@edene/components": "^0.0.6",
+    "@edene/foundations": "^0.0.4",
+    "@edene/hooks": "^0.0.1",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
