--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@nrwl/react": "^14.5.10",
     "@nrwl/web": "14.5.10",
     "@nrwl/workspace": "14.5.10",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
