--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   },
   "private": true,
   "dependencies": {
-    "@edene/components": "^0.0.6",
-    "@edene/foundations": "^0.0.4",
-    "@edene/hooks": "^0.0.1",
+    "@edene/components": "0.0.6",
+    "@edene/foundations": "0.0.4",
+    "@edene/hooks": "0.0.1",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "axios": "0.27.2",
-    "core-js": "^3.6.5",
+    "core-js": "3.6.5",
     "express": "4.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
-    "swr": "^1.3.0",
+    "swr": "1.3.0",
     "tslib": "2.3.0"
   },
   "devDependencies": {
@@ -31,12 +31,12 @@
     "@nrwl/jest": "14.5.10",
     "@nrwl/linter": "14.5.10",
     "@nrwl/node": "14.5.10",
-    "@nrwl/react": "^14.5.10",
+    "@nrwl/react": "14.5.10",
     "@nrwl/web": "14.5.10",
     "@nrwl/workspace": "14.5.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/react-hooks": "8.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
