--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@edene/hooks": "0.0.1",
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
+    "@uirouter/react": "^1.0.7",
     "axios": "0.27.2",
     "core-js": "3.6.5",
     "express": "4.18.1",
